--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- HEADER START -->
+    <header>
+        <div class="container-sm d-flex justify-content-end">
+            <button id="btn-start" type="button" class="btn btn-outline-success mx-3">Success</button>
+        </div>
+    </header>
+    <!-- HEADER END -->
+
+
+    <!-- MAIN START -->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content d-flex justify-content-center">
+                        <div id="grid"></div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </main>
+    <!-- MAIN END -->
+
+
+
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
